[cleanup] Fix all error prone issues